# qbot-sdk

./: .gitignore  README.md  example.ipynb  pyproject.toml
.github/workflows/: python-package.yml
qbot/: __init__.py
qbot/data/: data_field.py  data_io.py
qbot/strategy/: strategy.py  utils.py
tests/: conftest.py  test_data_field.py  test_data_io.py  test_strategy.py
